feat: add pr#2269 in gsoc project.md

--- a/_projects/gsoc2024.md
+++ b/_projects/gsoc2024.md
@@ -49,7 +49,7 @@ The main goal of this project can be summarized in Figures 1 and 2. Figure 1 sho
     We created an hpdcache wrapper module that includes a prefetcher wrapper and an interface adapter with CVA6/Ariane in addition to hpdcache, the main and top module of HPDC.
     We decided to aim for making this hpdcache wrapper module usable as both an instruction cache and a data cache by instantiating it.
 
-- making the hpdcache wrapper to function as an instruction cache <span style="color: lime; ">【ongoing】</span> [PR#2288](https://github.com/openhwgroup/cva6/pull/2288)
+- making the hpdcache wrapper to function as an instruction cache <span style="color: lime; ">【ongoing】</span> [PR#2288](https://github.com/openhwgroup/cva6/pull/2288), [PR#2269](https://github.com/openhwgroup/cva6/pull/2269)
 
 	In this PR, the main focus is on developing/modifying and debugging the adapter that interfaces with the core and the AXI arbiter that interfaces with memory, when using HPDC as an instruction cache.
 
@@ -57,7 +57,7 @@ The main goal of this project can be summarized in Figures 1 and 2. Figure 1 sho
 
     For the AXI arbiter, we modified it to split the ports that handle requests for misses and non-cacheable requests. The previous instruction cache uses a single port since it handles single request, but we made this change to take advantage of HPDC's ability to handle multiple requests.
 
-    Currently, this PR has not yet passed the riscv tests and is still under debugging. After passing the tests, I plan to add a feature that makes it configurable to switch between the original instruction cache and the instruction cache using HPDC. Then, I will split the PR into separate parts for easier review and aim to merge them.
+    Currently, this PR has not yet passed the riscv tests and is still under debugging. After passing the tests, I plan to add a feature that makes it configurable to switch between the original instruction cache and the instruction cache using HPDC. Then, I will split the PR into separate parts for easier review and aim to merge them. ([PR#2269]((https://github.com/openhwgroup/cva6/pull/2269)) is a partial implementation of the adapter.)
 
 
 <br>
