feat: add waveform diagram in gsoc project.md

--- a/_projects/gsoc2024.md
+++ b/_projects/gsoc2024.md
@@ -20,7 +20,7 @@ Project Page: [here!](https://summerofcode.withgoogle.com/programs/2024/projects
 
 As computing technology advances, the need for flexible and high-performance cache solutions is growing. The importance of cache designs that meet different needs is increasing, and new frameworks are being developed.
 
-The [CVA6/Ariane](https://github.com/openhwgroup/cva6) is  is an open-source RISC-V processor, and there is active growth in its ecosystem and its surrounding technologies in addition to the development of the core itself. The CVA6/Ariane core supports several different L1 data caches for different contexts and user demands, and HPDC is currently an available high performance data cache for the CVA6/Ariane.
+The [CVA6/Ariane](https://github.com/openhwgroup/cva6) is an open-source RISC-V processor, and there is active growth in its ecosystem and its surrounding technologies, in addition to the development of the core itself. The CVA6/Ariane core supports several different L1 data caches for different contexts and user demands, and HPDC is currently an available high performance data cache for the CVA6/Ariane.
 
 [HPDC](https://github.com/openhwgroup/cv-hpdcache) is an open-source, Out-of-Order L1 data cache that supports multi-request and multi-issue, capable of handling multiple requests and cache misses concurrently.
 
@@ -30,11 +30,11 @@ In this project, we focus on extending the HPDC to make it usable as an instruct
 <br>
 
 ## Project Idea
-The main goal of this project can be summarized in Figures 1 and 2. Figure 1 shows the CVA6/Ariane design using HPDC as a data cache and the default instruction cache as the instruction cache, while Figure 2 shows HPDC being used as both the data cache and the instruction cache.
+The main goal of this project can be summarized in Figures 1 and 2. Figure 1 shows the CVA6/Ariane design using HPDC as a data cache and the default instruction cache as the instruction cache. In contrast, Figure 2 shows HPDC being used as both the data cache and the instruction cache.
 
 <div class="row">
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.liquid loading="eager" path="assets/img/ariane_cache.jpg" title="example image" class="img-fluid rounded z-depth-1" %}
+        {% include figure.liquid loading="eager" path="assets/img/ariane_cache.jpg" title="riane and cache" class="img-fluid rounded z-depth-1" %}
     </div>
 </div>
 
@@ -47,18 +47,30 @@ The main goal of this project can be summarized in Figures 1 and 2. Figure 1 sho
 - creating the HPDC wrapper <span style="color: darkviolet; ">【completed】</span> [PR#2173](https://github.com/openhwgroup/cva6/pull/2173)
 
     We created an hpdcache wrapper module that includes a prefetcher wrapper and an interface adapter with CVA6/Ariane in addition to hpdcache, the main and top module of HPDC.
-    We decided to aim for making this hpdcache wrapper module usable as both an instruction cache and a data cache by instantiating it.
+    We decided to aim to make this hpdcache wrapper module usable as both an instruction cache and a data cache by instantiating it.
 
 - making the hpdcache wrapper to function as an instruction cache <span style="color: lime; ">【ongoing】</span> [PR#2288](https://github.com/openhwgroup/cva6/pull/2288), [PR#2269](https://github.com/openhwgroup/cva6/pull/2269)
 
 	In this PR, the main focus is on developing/modifying and debugging the adapter that interfaces with the core and the AXI arbiter that interfaces with memory, when using HPDC as an instruction cache.
 
-    The key feature of the adapter is that it has been designed to support the OBI interface. The OBI interface is a bus interface that is being newly introduced in the CVA6/Ariane. It is assumed that a scratchpad, which does not benefit from the cache, is also used. Therefore there are cases where the physical address is not transmitted to the cache (instead it is transmitted to the scratchpad). HPDC does not support this case, so we implemented a feature in the adapter that issues a kill request to HPDC when the corresponding physical address is not transmitted.
+    The key feature of the adapter is that it has been designed to support the OBI interface. The OBI interface is a bus interface that is being newly introduced in the CVA6/Ariane. It is assumed that a scratchpad, which does not benefit from the cache, is also used. Therefore there are cases where the physical address is not transmitted to the cache (instead, it is transmitted to the scratchpad). HPDC does not support this case, so we implemented a feature in the adapter that issues a kill request to HPDC when the corresponding physical address is not transmitted. (cf. Figure3)
 
-    For the AXI arbiter, we modified it to split the ports that handle requests for misses and non-cacheable requests. The previous instruction cache uses a single port since it handles single request, but we made this change to take advantage of HPDC's ability to handle multiple requests.
+    With respect to the AXI arbiter, we modified it to split the ports that handle requests for misses and non-cacheable requests. The previous instruction cache uses a single port since it handles a single request, but we made this change to take advantage of HPDC's ability to handle multiple requests.
 
-    Currently, this PR has not yet passed the riscv tests and is still under debugging. After passing the tests, I plan to add a feature that makes it configurable to switch between the original instruction cache and the instruction cache using HPDC. Then, I will split the PR into separate parts for easier review and aim to merge them. ([PR#2269]((https://github.com/openhwgroup/cva6/pull/2269)) is a partial implementation of the adapter.)
+    Currently, this PR has not yet passed the RISC-V tests and is still being debugged. After passing the tests, I plan to add a feature that makes it configurable to switch between the original instruction cache and the instruction cache using HPDC. Then, I will split the PR into separate parts for easier review and aim to merge them. ([PR#2269]((https://github.com/openhwgroup/cva6/pull/2269)) is a partial implementation of the adapter.)
 
+<div class="column">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/obi_req_diagram.jpg" title="obi_req diagram" class="img-fluid rounded z-depth-1 " %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/obi_req_wave.jpg" title="obi_req wave" class="img-fluid rounded z-depth-1 " %}
+    </div>
+</div>
+<div class="caption">
+    Figure3: a diagram of the new core→icache communication protocol consisting of OBI and sideband signals (above) <br>
+    and its actual waveform (below)
+</div>
 
 <br>
 <br>
